Added a bunch of styles and also finished the api calls

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Home</h1>
+
+<main>
+    <section id="main-img">
+        <h1 id="slogan">Strengthen your body, strengthen your mind</h1>
+        <a href="/login" id="start-button">Start now!</a>
+    </section>
+</main>
 {% endblock %}
