--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Routine</title>
+  <title>Fitness</title>
+  <link rel="stylesheet" href="../static/css/navbar.css">
+  <link rel="stylesheet" href="../static/css/body.css">
+  <link rel="stylesheet" href="../static/css/login.css">
+  <link rel="stylesheet" href="../static/css/forms.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lumen/bootstrap.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Nunito+Sans:ital@1&display=swap" rel="stylesheet">
+  
 </head>
 <body>
+  <header class="main-header">
+    <div>
+        <a class="main-brand_name" href="/">
+            Fitness
+        </a>
+    </div>
+    <nav class="main-nav">
+        <ul class="main-nav_items">
+            <li class="main-nav_item">
+                <a href="/">Home</a>
+            </li>
+            <li class="main-nav_item">
+                <a href="404.html">Plans</a>
+            </li>
+            <li class="main-nav_item">
+                <a href="/login">Sign Up</a>
+            </li>
+        </ul>
+    </nav>
+  </header>
 
-<div class="container">
 {% block content %}
 {% endblock %}
-</div>
 
 </body>
 </html>
