--- a/templates/login.html
+++ b/templates/login.html
@@ -2,26 +2,37 @@
 
 {% block content %}
 
-<h1 class="display-1">Login</h1>
-<p class="lead">Login Below. Don't have an account? <a href="/register">Register here</a></p>
+<div class="background-img_login"></div>
 
-<form method="POST">
+<div class="main-login_box">
+  <div class="login-form_box">
+    <h1 id="heading">Login</h1>
+    <p class="lead">Login Below. Don't have an account? <a href="/register">Register here</a></p>
+    
+    <form method="POST">
+    
+      {{ form.hidden_tag() }}
+    
+      {% for field in form
+        if field.widget.input_type != 'hidden' %}
+      <p>
+        {{ field.label }}
+        {{ field(class_="form-control") }}
+    
+        {% for error in field.errors %}
+        <span class="form-text text-danger">{{ error }}</span>
+        {% endfor %}
+      </p>
+      {% endfor %}
+    
+      <button class="button-submit" type="submit" href="/form">Login</button>
+    </form>
+  </div>
+</div>
 
-  {{ form.hidden_tag() }}
+  
+</div>
 
-  {% for field in form
-    if field.widget.input_type != 'hidden' %}
-  <p>
-    {{ field.label }}
-    {{ field(class_="form-control") }}
 
-    {% for error in field.errors %}
-    <span class="form-text text-danger">{{ error }}</span>
-    {% endfor %}
-  </p>
-  {% endfor %}
 
-  <button class="btn btn-success" type="submit">Login</button>
-
-</form>
 {% endblock %}
