--- a/templates/register.html
+++ b/templates/register.html
@@ -1,27 +1,34 @@
-{% extends 'base.html'  %}
+{% extends 'base.html' %}
 
 {% block content %}
 
-<h1 class="display-1">Sign Up</h1>
-<p class="lead">Register below to save your workout routine!</p>
 
-<form method="POST">
+<div class="background-img_login"></div>
 
-  {{ form.hidden_tag() }}
+<div class="main-login_box">
+  <div class="login-form_box">
+    <h1 id="heading">Sign Up</h1>
+    <p class="lead">Register below to save your workout routine!</p>
 
-  {% for field in form
-    if field.widget.input_type != 'hidden' %}
-  <p>
-    {{ field.label }}
-    {{ field(class_="form-control") }}
+    <form method="POST">
 
-    {% for error in field.errors %}
-    <span class="form-text text-danger">{{ error }}</span>
-    {% endfor %}
-  </p>
-  {% endfor %}
+      {{ form.hidden_tag() }}
 
-  <button class="btn btn-success" type="submit">Register</button>
+      {% for field in form
+        if field.widget.input_type != 'hidden' %}
+      <p>
+        {{ field.label }}
+        {{ field(class_="form-control") }}
 
-</form>
+        {% for error in field.errors %}
+        <span class="form-text text-danger">{{ error }}</span>
+        {% endfor %}
+      </p>
+      {% endfor %}
+
+      <button class="button-submit" type="submit">Register</button>
+
+    </form>
+  </div>
+</div>
 {% endblock %}
