--- a/templates/survey.html
+++ b/templates/survey.html
@@ -8,7 +8,7 @@
   {% for field in form
     if field.widget.input_type != 'hidden' %}
   <p>
-    {{ field.label }}
+    {{ field.label (class_="form-text text-danger")}}
     {{ field(class_="form-control") }}
 
     {% for error in field.errors %}
