Added more styling

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 <a href="404.html">Plans</a>
             </li>
             <li class="main-nav_item">
-                <a href="/login">Sign Up</a>
+                <a href="/login">Log In</a>
             </li>
         </ul>
     </nav>
