--- a/static/css/body.css
+++ b/static/css/body.css
@@ -10,7 +10,7 @@ body{
     background: url("../img/land-img.jpg");
     background-size: cover;
     width: 100%;
-    height: 528px;
+    height: 100vh;
     padding: 10px;
     font-family: 'Nunito Sans', sans-serif;
 }
