--- a/templates/survey.html
+++ b/templates/survey.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2 class="display-1">Answer these short questions to create a workout</h2>
-<form method="POST">
+
+
+<!-- <form method="POST">
 
   {{ form.hidden_tag() }}
 
   {% for field in form
     if field.widget.input_type != 'hidden' %}
   <p>
-    {{ field.label (class_="form-text text-danger")}}
+    {{ field.label }}
     {{ field(class_="form-control") }}
 
     {% for error in field.errors %}
@@ -17,7 +18,129 @@
   </p>
   {% endfor %}
 
-  <button class="btn btn-success" type="submit">Create</button>
+  <button type="submit">Create</button>
 
-</form>
+</form> -->
+<div class="form-container">
+  <h1 class="heading">Welcome, username!</h1>
+  <h2>Answer these short questions to create a workout</h2>
+  <div id="multi-step-form-container">
+    <!-- Form Steps / Progress Bar -->
+    <ul class="form-stepper form-stepper-horizontal text-center mx-auto pl-0">
+      <!-- Step 1 -->
+      <li class="form-stepper-active text-center form-stepper-list" step="1">
+        <a class="mx-2">
+          <span class="form-stepper-circle">
+            <span>1</span>
+          </span>
+          <div class="label">Step 1</div>
+        </a>
+      </li>
+      <!-- Step 2 -->
+      <li class="form-stepper-unfinished text-center form-stepper-list" step="2">
+        <a class="mx-2">
+          <span class="form-stepper-circle text-muted">
+            <span>2</span>
+          </span>
+          <div class="label text-muted">Step 2</div>
+        </a>
+      </li>
+      <!-- Step 3 -->
+      <li class="form-stepper-unfinished text-center form-stepper-list" step="3">
+        <a class="mx-2">
+          <span class="form-stepper-circle text-muted">
+            <span>3</span>
+          </span>
+          <div class="label text-muted">Step 3</div>
+        </a>
+      </li>
+
+      <li class="form-stepper-unfinished text-center form-stepper-list" step="4">
+        <a class="mx-2">
+          <span class="form-stepper-circle text-muted">
+            <span>4</span>
+          </span>
+          <div class="label text-muted">Step 4</div>
+        </a>
+      </li>
+
+    </ul>
+    <!-- Step Wise Form Content -->
+    <form id="userAccountSetupForm" name="userAccountSetupForm" enctype="multipart/form-data" method="POST">
+      <!-- Step 1 Content -->
+      <section id="step-1" class="form-step">
+        <h2 class="font-normal">Question 1</h2>
+        <!-- Step 1 input fields -->
+        <div class="mt-3">
+          {{ form.goal.label }}
+          {{ form.goal(class_="form-control") }}
+          {% for error in form.goal.errors %}
+            <span class="form-text text-danger">{{ error }}</span>
+          {% endfor %}
+        </div>
+        <!-- Add other fields of step 1 here if needed -->
+        <div class="mt-3">
+          <button class="button btn-navigate-form-step" type="button" step_number="2">Next</button>
+        </div>
+      </section>
+      <!-- Step 2 Content, default hidden on page load. -->
+      <section id="step-2" class="form-step d-none">
+        <h2 class="font-normal">Question 2</h2>
+        <!-- Step 2 input fields -->
+        <div class="mt-3">
+          {{ form.days_per_week.label }}
+          {{ form.days_per_week(class_="form-control") }}
+          {% for error in form.days_per_week.errors %}
+            <span class="form-text text-danger">{{ error }}</span>
+          {% endfor %}
+        </div>
+        <!-- Add other fields of step 2 here if needed -->
+        <div class="mt-3">
+          <button class="button btn-navigate-form-step" type="button" step_number="1">Prev</button>
+          <button class="button btn-navigate-form-step" type="button" step_number="3">Next</button>
+        </div>
+      </section>
+
+      <section id="step-3" class="form-step d-none">
+        <h2 class="font-normal">Question 3</h2>
+        <!-- Step 2 input fields -->
+        <div class="mt-3">
+          {{ form.time_avaliable.label }}
+          {{ form.time_avaliable(class_="form-control") }}
+          {% for error in form.time_avaliable.errors %}
+            <span class="form-text text-danger">{{ error }}</span>
+          {% endfor %}
+        </div>
+        <!-- Add other fields of step 2 here if needed -->
+        <div class="mt-3">
+          <button class="button btn-navigate-form-step" type="button" step_number="1">Prev</button>
+          <button class="button btn-navigate-form-step" type="button" step_number="4">Next</button>
+        </div>
+      </section>
+
+      <!-- Step 3 Content, default hidden on page load. -->
+      <section id="step-4" class="form-step d-none">
+        <h2 class="font-normal">Question 4</h2>
+        <!-- Step 3 input fields -->
+        <div class="mt-3">
+          {{ form.equipment.label }}
+          {{ form.equipment(class_="form-control") }}
+          {% for error in form.equipment.errors %}
+            <span class="form-text text-danger">{{ error }}</span>
+          {% endfor %}
+        </div>
+        <!-- Add other fields of step 3 here if needed -->
+        <div class="mt-3">
+          <button class="button btn-navigate-form-step" type="button" step_number="3">Prev</button>
+          <button type="submit">Save</button>
+        </div>
+      </section>
+      {{ form.hidden_tag() }}
+    </form>
+  </div>
+</div>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
+
+
+
 {% endblock %}
