Added css and fixed some html stuff

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../static/css/body.css">
   <link rel="stylesheet" href="../static/css/login.css">
   <link rel="stylesheet" href="../static/css/forms.css">
+  <link rel="stylesheet" href="../static/css/results.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lumen/bootstrap.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
