Added jinja for the login, logout, and signup

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,18 @@
             <li class="main-nav_item">
                 <a href="404.html">Plans</a>
             </li>
-            <li class="main-nav_item">
-                <a href="/login">Log In</a>
-            </li>
+            {% if session['user_id'] %}
+                <li class="main-nav-item">
+                <a href="/logout">Logout</a>
+                </li>
+            {% else %}
+                <li class="main-nav-item">
+                <a href="/login">Login</a>
+                </li>
+                <li class="main-nav-item">
+                <a href="/register">Sign up</a>
+                </li>
+            {% endif %}
         </ul>
     </nav>
   </header>
