--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,9 @@
   <div class="login-form_box">
     <h1 id="heading">Sign Up</h1>
     <p class="lead">Register below to save your workout routine!</p>
-
+    {% for mesg in get_flashed_messages() %}
+    <p class="text-danger">{{ mesg }}</p>
+    {% endfor %}
     <form method="POST">
 
       {{ form.hidden_tag() }}
