--- a/static/css/login.css
+++ b/static/css/login.css
@@ -8,11 +8,10 @@
 }
 
 .login-form_box{
-    padding-top: 50%;
     background:     #1e1e1e;
     display: inline-block;
-    width: 400px;
-    height: 600px;
+    width: 500px;
+    height: 700px;
     margin-top: 0px;
     border: 2px solid grey;
     text-align: center;
@@ -24,7 +23,6 @@
     border-radius: 4px;
     border: 1px solid #000000;
     margin-bottom: 20px;
-
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     height: 369px;
 }
@@ -50,7 +48,7 @@
     font-weight: bold;
 }
 
-button{
+.button-submit{
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     text-align: center;
@@ -61,10 +59,17 @@ button{
     color: black;
     transition: font-size 0.3s ease-in-out;
     text-decoration: none;
+    text-align: center;
+    margin: 0 auto;
 }
 
 
-button:hover {
+.button-submit:hover {
     background: #e0d313;
     font-size: 15px;
+}
+
+
+.registerp{
+    margin-top: 10px;
 }
