--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="../static/css/login.css">
   <link rel="stylesheet" href="../static/css/forms.css">
   <link rel="stylesheet" href="../static/css/results.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lumen/bootstrap.css">
+  <link rel="stylesheet" href="../static/css/footer.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Nunito+Sans:ital@1&display=swap" rel="stylesheet">
@@ -26,27 +27,27 @@
     <nav class="main-nav">
         <ul class="main-nav_items">
             <li class="main-nav_item">
-                <a href="/">Home</a>
-            </li>
-            <li class="main-nav_item">
                 <a href="404.html">Plans</a>
             </li>
             {% if session['user_id'] %}
-                <li class="main-nav-item">
+                <li class="main-nav_item">
                 <a href="/logout">Logout</a>
                 </li>
+                <li class="main-nav_item">
+                <a href="/users/{{session['user_id']}}">Profile</a>
+                </li>
             {% else %}
-                <li class="main-nav-item">
+                <li class="main-nav_item">
                 <a href="/login">Login</a>
                 </li>
-                <li class="main-nav-item">
+                <li class="main-nav_item">
                 <a href="/register">Sign up</a>
                 </li>
             {% endif %}
         </ul>
     </nav>
   </header>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 {% block content %}
 {% endblock %}
 
