--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../static/css/login.css">
   <link rel="stylesheet" href="../static/css/forms.css">
   <link rel="stylesheet" href="../static/css/results.css">
+  <link rel="stylesheet" href="../static/css/profile.css">
   <link rel="stylesheet" href="../static/css/footer.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
