--- a/templates/user.html
+++ b/templates/user.html
@@ -32,9 +32,14 @@
         </tbody>
         </table>
     {% else %}
+    <div class="non-login-box">
         <p>You haven't created any workouts yet!</p>
         <p>Click <a href="/form">here</a> to create a workout.</p>
+    </div>
     {% endif %}
+    <div class="logout">
+        <p><a href="/logout" >Logout</a></p>
+    </div>
 </div>
 
 
