--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="column">
                     <h1 class="footer-heading">Contact Us</h1>
-                    <p id="footer-text">Email: example@gmail.com</p>
+                    <p id="footer-text">Email: andrewsushi12@gmail.com</p>
                 </div>
                 <div class="column">
                     <h1 class="footer-heading">About Us</h1>
